--- a/src/app/features/auth/components/register/register.component.html
+++ b/src/app/features/auth/components/register/register.component.html
@@ -8,11 +8,11 @@
               <div class="form-group">
                   <mat-form-field>
                     <mat-label for="firstName">Prenumele</mat-label>
-                    <input matInput formControlName="firstName" />
-                    <mat-error *ngIf="(!registerForm.get('firstName').valid || registerForm.get('firstName').errors?.whitespace) && !registerForm.get('firstName').errors?.required">
+                    <input matInput id="registerFirstName" formControlName="firstName" />
+                    <mat-error id="registerFirstNameInvalidError" *ngIf="(!registerForm.get('firstName').valid || registerForm.get('firstName').errors?.whitespace) && !registerForm.get('firstName').errors?.required">
                       Vă rugăm introduceți un prenume valid!
                     </mat-error>
-                    <mat-error *ngIf="registerForm.get('firstName').errors?.required">
+                    <mat-error id="registerFirstNameRequiredError" *ngIf="registerForm.get('firstName').errors?.required">
                       Prenumele e obligatoriu!
                     </mat-error>
                   </mat-form-field>
@@ -20,11 +20,11 @@
               <div class="form-group">
                   <mat-form-field>
                     <mat-label for="lastName">Nume</mat-label>
-                    <input matInput formControlName="lastName" />
-                    <mat-error *ngIf="(!registerForm.get('lastName').valid || registerForm.get('lastName').errors?.whitespace) && !registerForm.get('lastName').errors?.required">
+                    <input id="registerLastName" matInput formControlName="lastName" />
+                    <mat-error id="registerLastNameInvalidError" *ngIf="(!registerForm.get('lastName').valid || registerForm.get('lastName').errors?.whitespace) && !registerForm.get('lastName').errors?.required">
                       Vă rugăm introduceți un nume valid!
                     </mat-error>
-                    <mat-error *ngIf="registerForm.get('lastName').errors?.required">
+                    <mat-error id="registerLastNameRequiredError" *ngIf="registerForm.get('lastName').errors?.required">
                       Numele e obligatoriu!
                     </mat-error>
                   </mat-form-field>
@@ -32,11 +32,11 @@
               <div class="form-group">
                   <mat-form-field>
                     <mat-label for="email">Email</mat-label>
-                    <input matInput formControlName="email" />
-                    <mat-error *ngIf="(!registerForm.get('email').valid || registerForm.get('email').errors?.whitespace) && !registerForm.get('email').errors?.required">
+                    <input id="registerEmail" matInput formControlName="email" />
+                    <mat-error id="registerEmailInvalidError" *ngIf="(!registerForm.get('email').valid || registerForm.get('email').errors?.whitespace) && !registerForm.get('email').errors?.required">
                       Vă rugăm introduceți un email valid!
                     </mat-error>
-                    <mat-error *ngIf="registerForm.get('email').errors?.required">
+                    <mat-error id="registerEmailRequiredError" *ngIf="registerForm.get('email').errors?.required">
                       Adresa de email e obligatorie!
                     </mat-error>
                   </mat-form-field>
@@ -44,14 +44,14 @@
               <div class="form-group">
                   <mat-form-field>
                     <mat-label for="password">Parola</mat-label>
-                    <input matInput [type]="hidePassword ? 'password' : 'text'" formControlName="password" #password >
+                    <input id="registerPassword" matInput [type]="hidePassword ? 'password' : 'text'" formControlName="password" #password >
                     <mat-icon matSuffix (click)="togglePasswordVisibility(password)" >
                       {{hidePassword?'visibility_off':'visibility'}}
                     </mat-icon>
-                    <mat-error *ngIf="registerForm.get('password').errors?.pattern">
+                    <mat-error id="registerPasswordInvalidError" *ngIf="registerForm.get('password').errors?.pattern">
                       Parola trebuie să aibă cel puțin 10 caractere, o literă mare, o literă mică, un număr și un simbol.
                     </mat-error>
-                    <mat-error *ngIf="registerForm.get('password').errors?.required">
+                    <mat-error id="registerPasswordRequiredError" *ngIf="registerForm.get('password').errors?.required">
                       Parola e obligatorie!
                     </mat-error>
                   </mat-form-field>
@@ -59,19 +59,19 @@
               <div class="form-group" style="margin-top: 10px">
                   <mat-form-field>
                     <mat-label for="confirmationPassword">Confirmă parola</mat-label>
-                    <input matInput [type]="hideConfirmationPassword ? 'password' : 'text'" formControlName="confirmationPassword" #confirmationPassword [errorStateMatcher]="confirmValidParentMatcher">
+                    <input id="registerConfirmationPassword" matInput [type]="hideConfirmationPassword ? 'password' : 'text'" formControlName="confirmationPassword" #confirmationPassword [errorStateMatcher]="confirmValidParentMatcher">
                     <mat-icon matSuffix (click)="togglePasswordVisibility(confirmationPassword)">
                       {{hideConfirmationPassword?'visibility_off':'visibility'}}
                     </mat-icon>
-                    <mat-error *ngIf="registerForm.hasError('mismatch') && !registerForm.get('confirmationPassword').hasError('required')">
+                    <mat-error id="registerConfirmationPasswordMismatchError" *ngIf="registerForm.hasError('mismatch') && !registerForm.get('confirmationPassword').hasError('required')">
                       Parolele nu se potrivesc!
                     </mat-error>
-                    <mat-error *ngIf="registerForm.get('confirmationPassword').errors?.required">
+                    <mat-error id="registerConfirmationPasswordRequiredError" *ngIf="registerForm.get('confirmationPassword').errors?.required">
                       Parola de confirmare e obligatorie!
                     </mat-error>
                   </mat-form-field>
               </div>
-              <button mat-raised-button color="primary" type="submit" [disabled]="registerForm.invalid">Creează cont</button>
+              <button id="registerSubmit" mat-raised-button color="primary" type="submit" [disabled]="registerForm.invalid">Creează cont</button>
             </form>
           </mat-card-content>
         </div>
